feat: add picture upload with formdata
